force-app/main/default/objects/Camp_Available_Package__c/Camp_Available_Package__c.object-meta.xml
<CustomObject>
    <description>this object for camp class for manage Camp Available Package details</description>
    <label>Camp Available Package</label>
    <nameField>
        <label>Camp Available Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Camp Available Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>