force-app/main/default/objects/Camp_Available_Package__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field for camp package for manage camp package  active or not</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>