force-app/main/default/objects/Camp_Available_Package__c/fields/Camp_Name__c.field-meta.xml
<CustomField>
    <fullName>Camp_Name__c</fullName>
    <description>this field for camp package for manage selected camp name</description>
    <label>Camp Name</label>
    <referenceTo>Camp__c</referenceTo>
    <relationshipLabel>Camp Available Packages</relationshipLabel>
    <relationshipName>Camp_Available_Packages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>