force-app/main/default/objects/Camp_Available_Package__c/fields/No_of_days__c.field-meta.xml
<CustomField>
    <fullName>No_of_days__c</fullName>
    <description>this field for camp package for manage camp package number or days</description>
    <label>No. of days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>