force-app/main/default/objects/Camp_Available_Package__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this field for camp package for manage camp selected package</description>
    <label>Package</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Camp Available Packages</relationshipLabel>
    <relationshipName>Camp_Available_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>