force-app/main/default/objects/Camp_Available_Package__c/listViews/All_Camp_Available_Packages.listView-meta.xml
<ListView>
    <fullName>All_Camp_Available_Packages</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Package__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Camp Available Packages</label>
</ListView>